opentelemetry-demo/kubernetes/cart-canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cart
spec:
  host: cart
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cart
spec:
  hosts:
    - cart
  http:
    - route:
        - destination:
            host: cart
            subset: v1
          weight: 50
        - destination:
            host: cart
            subset: v2
          weight: 50
