opentelemetry-demo/kubernetes/cart-ds.yaml
# DestinationRule
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cart
spec:
  host: cart
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
